adding in a project templating system

--- a/_projects/2013-11-08-spoke-about-wordpress.html
+++ b/_projects/2013-11-08-spoke-about-wordpress.html
@@ -5,13 +5,10 @@ date: 2013-11-08 05:01:10.000000000 -05:00
 categories: []
 main_pic: ut-talk.png
 file: 2013-11-08-spoke-about-wordpress.html
+website_link: http://www.utoledo.edu/
+presentation_link: http://prezi.com/ms5pt9x9k1eq/all-about-wordpress/
 ---
 <p>
   I was asked to explain what the heck <a href="http://wordpress.org" title="WordPress" target="_blank">WordPress</a> is, why it can be valuable, what else is out there, and to walk through building a WordPress site from scratch. So, I asked my brother, <a href="http://mattmcalear.net" title="Matt McAlear" target="_blank">Matt McAlear</a> to help with the talk and together we explained everything we were asked to do in a fun way. We even showed how you could build a fantastic site from "scratch" in less than 10 minutes. Because we are nerds.
   <br />
-  <br />
-  <a href="http://www.utoledo.edu/" target="_blank">utoledo.edu</a>
-</p>
-<p>
-  <a href="http://prezi.com/ms5pt9x9k1eq/all-about-wordpress/" target="_blank">Click here to watch the Prezi.</a>
 </p>
