--- a/_projects/2013-11-08-started-sscs-internship-program-for-designers-developers.html
+++ b/_projects/2013-11-08-started-sscs-internship-program-for-designers-developers.html
@@ -7,6 +7,7 @@ tags: []
 main_pic: ssc-internships.png
 file: 2013-11-08-started-sscs-internship-program-for-designers-developers.html
 ---
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dxr9r5Egx70" frameborder="0" allowfullscreen></iframe>
 <p>
   Worked with Service Spring's Executive team, various colleges, and current employees that would work with the new interns to build the internship program!
 </p>
