--- a/_projects/2013-11-08-started-the-nerd-summit.html
+++ b/_projects/2013-11-08-started-the-nerd-summit.html
@@ -6,13 +6,11 @@ categories: []
 tags: []
 main_pic: nerd-summit.png
 file: 2013-11-08-started-the-nerd-summit.html
+website_link: http://www.thenerdsummit.com
+presentation_link: http://prezi.com/q8devhb7l12p/the-nerd-summit/
+<!-- code_link: https://github.com/kevinmcalear/quick_shark -->
 ---
 <p>
   Co-Founded a group in Northwest Ohio that is designed to bring all nerds together to help each other and the community! It started as a couple of nerds getting together and has grown from there.
   <br />
-  <br />
-  <a href="http://www.thenerdsummit.com" target="_blank">thenerdsummit.com</a>
-</p>
-<p>
-  <a href="http://prezi.com/q8devhb7l12p/the-nerd-summit/" target="_blank">Click Here For The Prezi</a>
 </p>
