--- a/_projects/2014-05-01-built-hashback.html
+++ b/_projects/2014-05-01-built-hashback.html
@@ -6,14 +6,10 @@ categories: []
 tags: []
 main_pic: hashback.png
 file: 2014-05-01-built-hashback.html
+project_link: http://hashback.herokuapp.com
+code_link: https://github.com/kevinmcalear/hashback
 ---
 <p>
   Hashtags that give back. A few friends had an idea to build a platform where people can use hashtags to send encouragement to others. I build everything from the ground up! Technologies Used: Ruby, Rails, PostgreSQL, JavaScript, HTML, and Instagram's API.
   <br />
-</p>
-<p>
-  <a href="http://hashback.herokuapp.com" target="_blank">hashback.herokuapp.com</a>
-</p>
-<p>
-  <a href="https://github.com/kevinmcalear/hashback" target="_blank">Go To The GitHub Project</a>
 </p>
