--- a/_projects/2014-05-01-created-tangent.html
+++ b/_projects/2014-05-01-created-tangent.html
@@ -6,14 +6,10 @@ categories: []
 tags: []
 main_pic: tangent.png
 file: 2014-05-01-created-tangent.html
+project_link: http://tangentapp.herokuapp.com/
+code_link: https://github.com/kevinmcalear/quick_shark
 ---
 <p>
   Tangent is a fun way to explore the web using word associations and different resources on the web. It was fun to build and use! Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, D3, JQuery, CSS, HTML, and 7 different APIs.
   <br />
-</p>
-<p>
-  <a href="http://tangentapp.herokuapp.com/" target="_blank">tangentapp.herokuapp.com</a>
-</p>
-<p>
-  <a href="https://github.com/kevinmcalear/quick_shark" target="_blank">Go To The GitHub Project</a>
 </p>
