--- a/_projects/2013-11-08-redesigned-solutions-iphone-app.html
+++ b/_projects/2013-11-08-redesigned-solutions-iphone-app.html
@@ -7,6 +7,7 @@ tags: []
 main_pic: ssc-ios.png
 file: 2013-11-08-redesigned-solutions-iphone-app.html
 ---
+<iframe width="560" height="315" src="https://www.youtube.com/embed/j2w8UO7cYHw" frameborder="0" allowfullscreen></iframe>
 <p>
   I built out a new user interface and user experience, updating the application to an iOS7 look and feel (incorporating flat design when appropriate for example). I worked with our internal iOS developer and provided him with extremely organized and customizable Photoshop files organized into easy-to-use groupings for individual items.
   <br />
