--- a/_projects/2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
+++ b/_projects/2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
@@ -6,17 +6,12 @@ categories: []
 tags: []
 main_pic: tech-crunch-hack.png
 file: 2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
+project_link: http://hack-argos.herokuapp.com/
+code_link: https://github.com/kevinmcalear/Argos
+presentation_link: http://on.aol.com/video/argos-crunchbase-viz---disrupt-ny-2014-hackathon-518219141
+
 ---
 <p>
   Our Team built a data viz to show the relationships between startups and their investors. We won the CrunchBase award and and free tickets to TechCrunch Disrupt ($3k a ticket!) Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, Esri Maps, JQuery, CSS, HTML, and the CrunchBase API.
   <br />
-</p>
-<p>
-  <a href="http://hack-argos.herokuapp.com/" target="_blank">hack-argos.herokuapp.com</a>
-</p>
-<p>
-  <a href="https://github.com/kevinmcalear/Argos" target="_blank">Go To The GitHub Project</a>
-</p>
-<p>
-  <a href="http://on.aol.com/video/argos-crunchbase-viz---disrupt-ny-2014-hackathon-518219141" target="_blank">Check Out Our 60 Second Presentation</a>
 </p>
