continutally improving project section

--- a/_projects/2013-11-06-built-a-machine-shops-website.html
+++ b/_projects/2013-11-06-built-a-machine-shops-website.html
@@ -6,10 +6,9 @@ categories: []
 tags: []
 main_pic: imm-web.png
 file: 2013-11-06-built-a-machine-shops-website.html
+website_link: http://www.inmacman.com/
 ---
 <p>
   Developed a spot for IMM to get their name into the market place, accurately representing who that are and what they can do, and created systems to automate a lot of their processes such as quoting new work.
   <br />
-  <br />
-  <a href="http://www.inmacman.com/" target="_blank">inmacman.com</a>
-  </p>
+</p>
