--- a/_projects/2013-11-08-built-a-photographers-website.html
+++ b/_projects/2013-11-08-built-a-photographers-website.html
@@ -6,10 +6,9 @@ categories: []
 tags: []
 main_pic: brandt-photography.png
 file: 2013-11-08-built-a-photographers-website.html
+website_link: http://brandtchapman.com/
 ---
 <p>
   I designed & built Brant's photography website to give him a place to share who he is, what he can do, and since I built it using WordPress, the ability to update and maintain it himself.
-</p>
-<p>
-  <a href="http://brandtchapman.com/" target="_blank">brandtchapman.com</a>
+  <br />
 </p>
