--- a/_projects/2013-11-08-redesigned-a-complex-e-commerce-site.html
+++ b/_projects/2013-11-08-redesigned-a-complex-e-commerce-site.html
@@ -6,10 +6,10 @@ categories: []
 tags: []
 main_pic: ssc-website.png
 file: 2013-11-08-redesigned-a-complex-e-commerce-site.html
+website_link: http://www.servicespring.com/
+
 ---
 <p>
   Service Spring Corporation has always been the innovator regarding technology in their industry. They built their old e-commerce website from scratch using modern web technology at the time. But, as technology goes, it was time for a complete infrastructure overhaul. So, I led a team to research & develop the best new site with the future in mind and we did just that! It was a great project to apply modern HTML5, CSS3, JavaScript, PHP, responsive design, CMS, UX, & other best practices to build a quality site that will grow into the future!
   <br />
-  <br />
-  <a href="http://www.servicespring.com/" target="_blank">servicespring.com</a>
 </p>
