--- a/_projects/2013-11-08-redesigned-solutions-iphone-app.html
+++ b/_projects/2013-11-08-redesigned-solutions-iphone-app.html
@@ -6,11 +6,11 @@ categories: []
 tags: []
 main_pic: ssc-ios.png
 file: 2013-11-08-redesigned-solutions-iphone-app.html
+website_link: http://www.sscorp.com/pages/door_solutions.html
 ---
 <iframe width="560" height="315" src="https://www.youtube.com/embed/j2w8UO7cYHw" frameborder="0" allowfullscreen></iframe>
+<br><br>
 <p>
   I built out a new user interface and user experience, updating the application to an iOS7 look and feel (incorporating flat design when appropriate for example). I worked with our internal iOS developer and provided him with extremely organized and customizable Photoshop files organized into easy-to-use groupings for individual items.
   <br />
-  <br />
-  <a href="http://www.sscorp.com/pages/door_solutions.html" target="_blank">sscorp.com/solutions</a>
 </p>
