--- a/_projects/2013-10-29-helped-create-missionwork.html
+++ b/_projects/2013-10-29-helped-create-missionwork.html
@@ -6,10 +6,9 @@ categories: []
 tags: []
 main_pic: mission@work.png
 file: 2013-10-29-helped-create-missionwork.html
+website_link: http://www.missionatwork.tv/
 ---
 <p>
   Mission At Work is a uniquely Service Spring answer to the problem of connecting people who want to volunteer and the organizations that desperately need these volunteers. We wanted to come up with a way to give back some of the blessings and use as many of our collective resources as possible. Mission@Work has given lots of time, money, resources, and love to several non-profits in the area and has help bond Service Spring Employees together through service.
   <br />
-  <br />
-  <a href="http://www.missionatwork.tv/" target="_blank">missionatwork.tv</a>
 </p>
