--- a/_projects/2013-11-06-created-a-musicians-logo-website.html
+++ b/_projects/2013-11-06-created-a-musicians-logo-website.html
@@ -6,10 +6,9 @@ categories: []
 tags: []
 main_pic: brian-music.png
 file: 2013-11-06-created-a-musicians-logo-website.html
+website_link: http://www.brianmcalear.com/
 ---
 <p>
   I created a website, logo, design, and marketing plan for an extremely talented local musician who wants to make it big. With a professional look and feel tailored to his audience, he hopes to make it to the next level. Check him out as he progresses!
   <br />
-  <br />
-  <a href="http://www.brianmcalear.com/" target="_blank">brianmcalear.com</a>
 </p>
