--- a/_projects/2013-11-08-built-iron-embers-webstore.html
+++ b/_projects/2013-11-08-built-iron-embers-webstore.html
@@ -6,10 +6,9 @@ categories: []
 tags: []
 main_pic: iron-and-ember.png
 file: 2013-11-08-built-iron-embers-webstore.html
+website_link: http://www.ironandember.com/
 ---
 <p>
   I built out and designed the initial look, feel, and functionality of I&A's e-commerce site and CMS. This is a startup that wants to sell "provisions for gentlemen" which I think is a great idea so I did the project for free.
   <br />
-  <br />
-  <a href="http://www.ironandember.com/" target="_blank">ironandember.com</a>
 </p>
