--- a/_projects/2013-11-08-make-a-wish-ypac-board-member.html
+++ b/_projects/2013-11-08-make-a-wish-ypac-board-member.html
@@ -6,10 +6,9 @@ categories: []
 tags: []
 main_pic: make-a-wish.png
 file: 2013-11-08-make-a-wish-ypac-board-member.html
+website_link: http://oki.wish.org/
 ---
 <p>
   Make-A-Wish grants the wishes of a children with life-threatening medical conditions to enrich the human experience with hope, strength & joy. As one of the first YPAC board members upon it's founding in 2011, I learned an incredible amount about how Make-A-Wish works, how non-profits can powerfully raise money, network, and change lives. I also had the opportunity to be a wish granter where I would meet with a wish child and their family, listen to their wish and work within the organization to make it come true.
   <br />
-  <br />
-  <a href="http://oki.wish.org/" target="_blank">oki.wish.org</a>
 </p>
