added more recent projects

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 permalink: /about/
 ---
 <div class="about">
-  <h2>My Current Skills.</h2>
+  <h2>My Current Skills</h2>
   <div class="col-3">
     <h2>Code</h2>
     <canvas id="lang-graph" width="400" height="400"></canvas>
@@ -17,7 +17,7 @@ permalink: /about/
     <h2>Data</h2>
     <canvas id="data-graph" width="400" height="400"></canvas>
   </div>
-  <h2>My Experience.</h2>
+  <h2>My Experience</h2>
   <div class="experience">
     <div class="col-3">
       <h2><a href="http://preview.sscorp.com/" target="_blank">Service Spring</a></h2>
@@ -41,6 +41,6 @@ permalink: /about/
       <p><strong>Roles Held:</strong><br> Expert In Residence </p>
     </div>
   </div>
-   <h2>Places I've Lived.</h2>
+   <h2>Places I've Lived</h2>
   <div id="map"></div>
 </div>
