--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@ layout: default
 ---
 <div id="my-pannel" class="panel">
   <h1 id="my-welcome"></h1>
-  <button id="explore-button" class="button button--nanuk button--round-l button--inverted .button--text-upper hidden">
-    &nbsp;<span>e</span><span>x</span><span>p</span><span>l</span><span>o</span><span>r</span><span>e</span>
-  </button>
+  <a href="/projects">
+    <button id="explore-button" class="button button--nanuk button--round-l button--inverted .button--text-upper hidden">
+      &nbsp;<span>e</span><span>x</span><span>p</span><span>l</span><span>o</span><span>r</span><span>e</span>
+    </button>
+  </a>
 </div>
 <div id="particles-js">
 </div>
