improving project tech stack section

--- a/_projects/2014-05-01-built-hashback.html
+++ b/_projects/2014-05-01-built-hashback.html
@@ -10,6 +10,8 @@ project_link: http://hashback.herokuapp.com
 code_link: https://github.com/kevinmcalear/hashback
 ---
 <p>
-  Hashtags that give back. A few friends had an idea to build a platform where people can use hashtags to send encouragement to others. I build everything from the ground up! Technologies Used: Ruby, Rails, PostgreSQL, JavaScript, HTML, and Instagram's API.
+  Hashtags that give back. A few friends had an idea to build a platform where people can use hashtags to send encouragement to others. I build everything from the ground up!
+  <div style="width:20px;background:#cacaca;height:1px;margin:0 auto;"></div>
+  Technologies Used: Ruby, Rails, PostgreSQL, JavaScript, HTML, and Instagram's API.
   <br />
 </p>
