--- a/_projects/2014-05-01-created-tangent.html
+++ b/_projects/2014-05-01-created-tangent.html
@@ -10,6 +10,8 @@ project_link: http://tangentapp.herokuapp.com/
 code_link: https://github.com/kevinmcalear/quick_shark
 ---
 <p>
-  Tangent is a fun way to explore the web using word associations and different resources on the web. It was fun to build and use! Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, D3, JQuery, CSS, HTML, and 7 different APIs.
+  Tangent is a fun way to explore the web using word associations and different resources on the web. It was fun to build and use!
+  <div style="width:20px;background:#cacaca;height:1px;margin:0 auto;"></div>
+  Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, D3, JQuery, CSS, HTML, and 7 different APIs.
   <br />
 </p>
