--- a/_projects/2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
+++ b/_projects/2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
@@ -12,6 +12,8 @@ presentation_link: http://on.aol.com/video/argos-crunchbase-viz---disrupt-ny-201
 
 ---
 <p>
-  Our Team built a data viz to show the relationships between startups and their investors. We won the CrunchBase award and and free tickets to TechCrunch Disrupt ($3k a ticket!) Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, Esri Maps, JQuery, CSS, HTML, and the CrunchBase API.
+  Our Team built a data viz to show the relationships between startups and their investors. We won the CrunchBase award and and free tickets to TechCrunch Disrupt ($3k a ticket!)
+  <div style="width:20px;background:#cacaca;height:1px;margin:0 auto;"></div>
+  Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, Esri Maps, JQuery, CSS, HTML, and the CrunchBase API.
   <br />
 </p>
