--- a/_projects/2014-07-01-built-kinvolved.html
+++ b/_projects/2014-07-01-built-kinvolved.html
@@ -10,6 +10,8 @@ website_link: https://kinvolved.com/
 ---
 <p>
   Kinvolved is an app to improve PreK-12 student attendance by sharing real-time information among families, schools, and after-school programs. I was the third employee and responsible for all tech aspects of the company.
+  <div style="width:20px;background:#cacaca;height:1px;margin:0 auto;"></div>
+  Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, D3, Angular, Bootstrap, CSS, HTML, and a few APIs.
   <br />
 </p>
 
