--- a/_projects/2015-01-01-cofounded-&-built-outdoola.html
+++ b/_projects/2015-01-01-cofounded-&-built-outdoola.html
@@ -10,7 +10,9 @@ project_link: https://outdoola1.firebaseapp.com/
 code_link: https://github.com/kevinmcalear/Outdoola.com
 ---
 <p>
-  Outdoola is an online marketplace for hunting, fishing, and other outdoor adventures. I designed and built the web application and co-founded the company with two other people while all of us were in three different cities. (Brooklyn, NY,  Atlanta, GA, and Space Coast, FL) We learned a lot about taking an idea and building it into a product on the side. We also applied to Y Combinator and got rejected but learned a lot from the experience.
+  Outdoola is an online marketplace for hunting, fishing, and other outdoor adventures. I designed and built the web application and co-founded the company with two other people while all of us were in three different cities. (Brooklyn, NY,  Atlanta, GA, and Space Coast, FL) We learned a lot about taking an idea and building it into a product on the side. We also applied to <a href="https://www.ycombinator.com/" target="_blank">Y Combinator</a> and got rejected but learned a lot from the experience.
+  <div style="width:20px;background:#cacaca;height:1px;margin:0 auto;"></div>
+  Technology Stack: Firebase, JavaScript, Bootstrap, Angular, CSS, HTML, and a few APIs.
   <br />
 </p>
 
