--- a/_projects/2015-02-01-education-map.html
+++ b/_projects/2015-02-01-education-map.html
@@ -12,6 +12,8 @@ presentation_link: https://www.facebook.com/Kinvolved/posts/855334584501386
 ---
 <p>
   Using publicly-available attendance and school performance data from the <a href="http://schools.nyc.gov/Accountability/tools/report/default.htm#FindPR" target="_blank">NYC Department of Education</a>, I created a tool to explore the correlations among zip codes, attendance, and graduation rates in NYC. It was also used in Kinvolved's presentation at <a href="https://vimeo.com/113464553" target="_blank">NY Tech Meetup</a> (around 1:14:30) and I also gave a talk at <a href="http://nyc.civicdesigncamp.org/" target="_blank">Civic Design Camp</a> using this tool.
+  <div style="width:20px;background:#cacaca;height:1px;margin:0 auto;"></div>
+  Technology Stack: JavaScript, CSS, HTML, and CartoDB.
   <br />
 </p>
 
