--- a/_projects/2015-04-01-haternews.html
+++ b/_projects/2015-04-01-haternews.html
@@ -10,7 +10,9 @@ website_link: https://kinvolved.com/the-problem
 code_link: https://github.com/kevinmcalear/hater_news
 ---
 <p>
-  I built an algorithm and web app to analyze haters on social networks. I wrote an <a href="https://news.ycombinator.com/item?id=8517727" target="_blank">article about the algorithm</a> and it as well as the app was on the <a href="http://www.producthunt.com/posts/hater-news" target="_blank">top of product hunt</a> and hacker news <a href="https://news.ycombinator.com/item?id=8517267" target="_blank">three</a> | <a href="https://news.ycombinator.com/item?id=8595367" target="_blank">different</a> | <a href="https://news.ycombinator.com/item?id=8517727" target="_blank">times</a>. Several countries picked up
+  I built an algorithm and web app to analyze haters on social networks. I wrote an <a href="https://news.ycombinator.com/item?id=8517727" target="_blank">article about the algorithm</a> and it as well as the app was on the <a href="http://www.producthunt.com/posts/hater-news" target="_blank">top of product hunt</a> and hacker news <a href="https://news.ycombinator.com/item?id=8517267" target="_blank">three</a> | <a href="https://news.ycombinator.com/item?id=8595367" target="_blank">different</a> | <a href="https://news.ycombinator.com/item?id=8517727" target="_blank">times</a>.
+  <div style="width:20px;background:#cacaca;height:1px;margin:0 auto;"></div>
+  Technology Stack: Python, Scikit Learn, Flask, JavaScript, jQuery, CSS, HTML, and a few APIs.
   <br />
 </p>
 
