added in amazon

--- a/about.html
+++ b/about.html
@@ -19,26 +19,33 @@ permalink: /about/
   </div>
   <h2>My Experience</h2>
   <div class="experience">
-    <div class="col-3">
+    <div class="col-4">
       <h2><a href="http://preview.sscorp.com/" target="_blank">Service Spring</a></h2>
       <p><a href="http://preview.sscorp.com/" target="_blank"><img src="/assets/pics/ssc_logo.jpg" height="65%" width="65%"></a></p>
       <p><strong>Size:</strong><br> 150+ employees</p>
       <p><strong>Industry:</strong><br> Manufacturing/Distribution</p>
       <p><strong>Roles Held:</strong><br> Director Of Technology, Project Manager, Operations Manager, Engineering Manager, Lean Administrator, Engineering Tech </p>
     </div
-    ><div class="col-3">
+    ><div class="col-4">
       <h2><a href="https://kinvolved.com/" target="_blank">Kinvovled</a></h2>
       <p><a href="https://kinvolved.com/" target="_blank"><img src="/assets/pics/kinvolved_logo.png" height="65%" width="65%"></a></p>
       <p><strong>Size:</strong><br> 8 employees</p>
       <p><strong>Industry:</strong><br> Education Technology</p>
       <p><strong>Roles Held:</strong><br> Senior Software Engineer, Software Engineer </p>
     </div
-    ><div class="col-3">
+    ><div class="col-4">
       <h2><a href="https://generalassemb.ly/" target="_blank">General Assembly</a></h2>
       <p><a href="https://generalassemb.ly/" target="_blank"><img src="/assets/pics/ga_logo.jpg" height="65%" width="65%"></a></p>
       <p><strong>Size:</strong><br> 250+ employees</p>
       <p><strong>Industry:</strong><br> Education</p>
       <p><strong>Roles Held:</strong><br> Expert In Residence </p>
+    </div
+    ><div class="col-4">
+      <h2><a href="http://www.amazon.com/" target="_blank">Amazon</a></h2>
+      <p><a href="http://www.amazon.com/" target="_blank"><img src="/assets/pics/amazon-logo.png" height="65%" width="65%"></a></p>
+      <p><strong>Size:</strong><br> 160,000+ employees</p>
+      <p><strong>Industry:</strong><br> E-commerce n' stuff</p>
+      <p><strong>Roles Held:</strong><br> Web Development Engineer </p>
     </div>
   </div>
    <h2>Places I've Lived</h2>
