fixes link to my hater news project

--- a/_projects/2015-04-01-haternews.html
+++ b/_projects/2015-04-01-haternews.html
@@ -6,7 +6,7 @@ categories: []
 tags: []
 main_pic: haternews.png
 file: 2015-04-01-haternews.html
-website_link: https://kinvolved.com/the-problem
+website_link: http://haternews.co
 code_link: https://github.com/kevinmcalear/hater_news
 ---
 <p>
